--- a/dogmatic-webapp/public/manifest.json
+++ b/dogmatic-webapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Dogmatic",
+  "name": "Dogmatic Landing Page",
   "icons": [
     {
       "src": "favicon.ico",
