--- a/dogmatic-app/package.json
+++ b/dogmatic-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap-css-only": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "localforage": "^1.7.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
